<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:text="@string/implementing_material_components_in_android"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_drawer_toggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/colorSecondary"
                android:text="@string/show_list"
                android:textSize="12sp" />

        </LinearLayout>



    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <LinearLayout
        android:id="@+id/menu"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="end"
        android:clipToPadding="false"
        android:elevation="8dp"
        android:scrollbarStyle="outsideOverlay"
        android:scrollbars="vertical">

        <TextView
            android:id="@+id/tv_rounded_bottom_sheet"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/rounded_bottom_sheet"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="#FFF"
            android:textStyle="bold"
            android:drawableStart="@drawable/ic_identifier"
            android:drawablePadding="0dp"/>

        <TextView
            android:id="@+id/tv_shrink_button"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/shrinking_button"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="#FFF"
            android:textStyle="bold"
            android:drawableStart="@drawable/ic_identifier"
            android:drawablePadding="0dp"/>

        <TextView
            android:id="@+id/tv_vector"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/animated_vector_drawables"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="#FFF"
            android:textStyle="bold"
            android:drawableStart="@drawable/ic_identifier"
            android:drawablePadding="0dp"/>

        <TextView
            android:id="@+id/tv_move"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/move_item_touch"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="#FFF"
            android:textStyle="bold"
            android:drawableStart="@drawable/ic_identifier"
            android:drawablePadding="0dp"/>

        <TextView
            android:id="@+id/tv_transform"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/motion_transform"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="#FFF"
            android:textStyle="bold"
            android:drawableStart="@drawable/ic_identifier"
            android:drawablePadding="0dp"/>

    </LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>