<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/cl_task_created"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorTextTransparent">

  <LinearLayout
      android:id="@+id/ll"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintBottom_toBottomOf="parent"
      android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_successfully_icon"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:id="@+id/tvCreateUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/colorText"
        android:text="@string/label_task_created"
        android:fontFamily="@font/kalam_bold"
        android:textSize="20sp"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/colorText"
        android:text="@string/label_task_has_been_added_to_list"
        android:fontFamily="@font/kalam_regular"
        android:textSize="14sp"
        android:layout_marginTop="10dp"/>

    <View
        android:layout_width="30dp"
        android:layout_height="4dp"
        android:background="@drawable/rectangle_bg_white"
        android:backgroundTint="@color/colorText"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20.5dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_done"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="54dp"
        android:backgroundTint="@color/colorText"
        app:cornerRadius="10dp"
        android:textColor="@color/colorPrimary"
        android:textAllCaps="false"
        android:text="@string/action_done"
        app:rippleColor="@color/colorAccent"/>

  </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>