<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:id="@+id/coordinator"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="10dp"
        android:fitsSystemWindows="true">

        <TextView
            android:id="@+id/add_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_photo"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp" />

        <LinearLayout
            android:id="@+id/ll_use_camera"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/add_photo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="?attr/selectableItemBackground">

            <ImageView
                android:layout_width="20dp"
                android:layout_marginStart="20dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_camera"
                android:tint="@color/colorPrimary"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="14sp"
                android:layout_marginStart="30dp"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/use_camera"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_use_gallery"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:layout_constraintTop_toBottomOf="@id/ll_use_camera"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="?attr/selectableItemBackground">

            <ImageView
                android:layout_width="20dp"
                android:layout_marginStart="20dp"
                android:tint="@color/colorPrimary"
                android:layout_height="match_parent"
                android:src="@drawable/ic_image" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="14sp"
                android:layout_marginStart="30dp"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/upload_from_gallery"/>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>