<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cl_create_new_task"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:clipChildren="false">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/margin_start_guideline"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintGuide_percent=".056"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/margin_end_guideline"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.95"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@android:color/transparent"
        app:contentInsetStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/button_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:src="@drawable/vd_pathmorph_drawer_arrow" />

        <TextView
            android:id="@+id/tvCreateUpdateToolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/kalam_bold"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/action_create_new_task"
            android:textColor="@color/colorText"
            android:textSize="16sp" />
    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="100dp"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="10dp"
        app:cardElevation="1dp"
        app:layout_constraintEnd_toStartOf="@id/margin_end_guideline"
        app:layout_constraintStart_toStartOf="@id/margin_start_guideline"
        app:layout_constraintTop_toBottomOf="@id/toolBar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_task_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/kalam_bold"
                android:text="@string/label_task_details"
                android:textColor="@color/colorText"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/view_sep_1"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="15dp"
                android:background="@color/colorTextLight"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_task_details" />

            <EditText
                android:id="@+id/et_task_details"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@null"
                android:fontFamily="@font/kalam_regular"
                android:hint="@string/label_add_description"
                android:inputType="textMultiLine|textCapSentences"
                android:minHeight="50dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingBottom="20dp"
                android:paddingTop="20dp"
                android:textColor="@color/colorText"
                android:textColorHint="@color/colorTextLight"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view_sep_1" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_2"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="10dp"
        app:cardElevation="1dp"
        app:layout_constraintEnd_toStartOf="@id/margin_end_guideline"
        app:layout_constraintStart_toStartOf="@id/margin_start_guideline"
        app:layout_constraintTop_toBottomOf="@id/card_1">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_date_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/kalam_regular"
                android:text="@string/label_date_and_time"
                android:textColor="@color/colorText"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_all_day_event"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/kalam_regular"
                android:text="@string/label_all_day_event"
                android:textColor="@color/colorText"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/switch_all_day"
                app:layout_constraintTop_toTopOf="parent" />

            <Switch
                android:id="@+id/switch_all_day"
                android:layout_width="52dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:switchMinWidth="50dp"
                android:switchPadding="1dp"
                android:thumbTint="@color/colorText"
                android:trackTint="@color/colorTextLight"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:id="@+id/card_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:clipChildren="false"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintEnd_toStartOf="@id/margin_end_guideline"
        app:layout_constraintStart_toStartOf="@id/margin_start_guideline"
        app:layout_constraintTop_toBottomOf="@id/card_2">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_start_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/il_start_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipChildren="false"
                android:textColorHint="@color/colorTextLight"
                app:boxBackgroundColor="@color/colorPrimary"
                app:boxBackgroundMode="filled">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_start_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rectangle_bg_white"
                    android:clickable="false"
                    android:enabled="false"
                    android:focusable="false"
                    android:fontFamily="@font/kalam_regular"
                    android:hint="@string/label_start_date"
                    android:layout_marginStart="10dp"
                    android:longClickable="false"
                    android:textColor="@color/colorText"
                    android:textSize="12sp" />

            </com.google.android.material.textfield.TextInputLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_end_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp"
            app:layout_constraintBottom_toBottomOf="parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/il_end_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipChildren="false"
                android:textColorHint="@color/colorTextLight"
                app:boxBackgroundColor="@color/colorPrimary"
                app:boxBackgroundMode="filled">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_end_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rectangle_bg_white"
                    android:clickable="false"
                    android:fontFamily="@font/kalam_regular"
                    android:enabled="false"
                    android:focusable="false"
                    android:hint="@string/label_end_date"
                    android:longClickable="false"
                    android:textColor="@color/colorText"
                    android:textSize="12sp" />

            </com.google.android.material.textfield.TextInputLayout>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_create"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="34dp"
        android:fontFamily="@font/kalam_bold"
        android:text="@string/action_create"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        app:cornerRadius="10dp"
        android:backgroundTint="@color/colorText"
        app:layout_constraintEnd_toStartOf="@id/margin_end_guideline"
        app:layout_constraintStart_toStartOf="@id/margin_start_guideline"
        app:layout_constraintTop_toBottomOf="@id/card_date"
        app:rippleColor="@color/colorAccentDim" />

</androidx.constraintlayout.widget.ConstraintLayout>